# thinkbox-krakatoa

./: .gitignore  flake.nix
Krakatoa/: CMakeLists.txt  package.nix
Krakatoa/cmake/: krakatoaConfig.cmake.in
Krakatoa/krakatoa/: geometry_renderer.hpp  light_object.hpp  particle_volume.hpp  render_element.hpp
Krakatoa/krakatoa/splat_renderer/: parallel_progress.hpp
Krakatoa/krakatoa/voxel_renderer/: image_wrapper.hpp
Krakatoa/src/: birth_channel_gen.cpp  channel_render_element.cpp  geometry_renderer.cpp  normal_render_element.cpp  particle_repopulation.cpp  renderer.cpp  sticky_channel_particle_istream.cpp  tangent_render_element.cpp  threading_functions.cpp  velocity_render_element.cpp  zdepth_render_element.cpp
Krakatoa/src/raytrace_renderer/: raytrace_renderer.cpp
Krakatoa/src/splat_renderer/: splat_cube_renderer.cpp  splat_lighting.cpp  splat_renderer.cpp
Krakatoa/src/voxel_renderer/: particle_data_source.cpp  voxel_renderer.cpp
KrakatoaSR/: CMakeLists.txt  justfile  package.nix
KrakatoaSR/Example/: example03.cpp
KrakatoaSR/cmake/: krakatoasrConfig.cmake.in
KrakatoaSR/src/: krakatoasr_mesh.cpp  krakatoasr_particles.cpp  krakatoasr_renderer.cpp
KrakatoaSR/src/krakatoasr_renderer/: image_writer.cpp  renderer.cpp
